--- a/diapos/AnalisisDatosProduccion.tex
+++ b/diapos/AnalisisDatosProduccion.tex
@@ -1,4 +1,4 @@
-% Created 2023-01-26 jue 13:07
+% Created 2023-03-12 dom 09:51
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -24,6 +24,7 @@
 \DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\tiny, formatcom = {\color{black!70}}}
 \bibliographystyle{plain}
 \usepackage{siunitx}
+\sisetup{per-mode=symbol}
 \sisetup{output-decimal-marker={,}}
 \DeclareSIUnit{\watthour}{Wh}
 \DeclareSIUnit{\wattpeak}{Wp}
@@ -31,7 +32,7 @@
 \DeclareSIUnit{\amperehour}{Ah}
 \usepackage{steinmetz}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
-\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\usepackage[symbol, perpage]{footmisc}
 \parskip=5pt
 \usetheme{Boadilla}
 \usecolortheme{rose}
@@ -61,7 +62,7 @@
 
 \maketitle
 
-\begin{frame}[label={sec:orgfe92809}]{Planteamiento}
+\begin{frame}[label={sec:orga79289c}]{Planteamiento}
 \begin{itemize}
 \item La energía producida por un SFV durante un período puede ser estimada a partir de la radiación incidente y de las características técnicas del sistema.
 \item Teniendo en cuenta el carácter estocástico de la radiación solar, la estimación de la energía que producirá un SFV durante los próximos años es un ejercicio de predicción con incertidumbre asociada.
@@ -71,10 +72,10 @@
 \end{frame}
 
 \section{Estadística}
-\label{sec:orgca2dd95}
+\label{sec:org43bddeb}
 
 
-\begin{frame}[label={sec:org35dd387}]{Variable aleatoria y proceso estocástico}
+\begin{frame}[label={sec:org002d3c5}]{Variable aleatoria y proceso estocástico}
 \begin{itemize}
 \item Una \alert{variable aleatoria} es una función que asigna un único numero
 real a cada resultado de un espacio muestral en un experimento.
@@ -84,7 +85,7 @@ lo largo del \alert{tiempo} (p.ej. la radiación).
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc88b1c8}]{Función de densidad de probabilidad}
+\begin{frame}[label={sec:orgbafeffc}]{Función de densidad de probabilidad}
 La función de densidad de probabilidad, \(f(X)\), de una variable
 aleatoria \alert{asigna probabilidad} a un suceso:
 
@@ -113,7 +114,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 \end{frame}
 
 
-\begin{frame}[label={sec:org28544bb}]{Media, varianza y desviación estándar}
+\begin{frame}[label={sec:org66d1e5b}]{Media, varianza y desviación estándar}
 \begin{itemize}
 \item La \alert{media} de una variable aleatoria es el \alert{centro de masas} de su función densidad de probabilidad:
 \end{itemize}
@@ -137,7 +138,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 
 
 
-\begin{frame}[label={sec:orgc371346}]{Combinación lineal de variables aleatorias}
+\begin{frame}[label={sec:org07f1d2d}]{Combinación lineal de variables aleatorias}
 \begin{itemize}
 \item La \alert{media de la suma} de varias variables aleatorias \alert{independientes} es
 la suma de las medias:
@@ -158,7 +159,7 @@ la suma de las medias:
 
 
 
-\begin{frame}[label={sec:orgf0f0337}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:orga96d41e}]{Media y varianza de la media muestral}
 \begin{itemize}
 \item Una \alert{muestra de una población} es un conjunto de variables
 aleatorias independientes (\(X_{1}...X_{n}\)).
@@ -174,7 +175,7 @@ variable aleatoria (que es una suma de variables aleatorias)
 
 
 
-\begin{frame}[label={sec:org17723e6}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:org9595ac6}]{Media y varianza de la media muestral}
 Sea una población cuya media es \(\mu\) y su varianza es \(\sigma^{2}\):
 
 \begin{itemize}
@@ -200,7 +201,7 @@ Por tanto, una forma de \alert{reducir la incertidumbre} es realizar la
 
 
 
-\begin{frame}[label={sec:org7b726fb}]{Mediana y cuartiles}
+\begin{frame}[label={sec:org3ac4587}]{Mediana y cuartiles}
 \begin{itemize}
 \item La \alert{mediana} divide el conjunto de valores de la variable en \alert{dos
 mitades} iguales (divide el area encerrada por la función densidad
@@ -215,46 +216,46 @@ una \alert{medida de la dispersión} de la variable.
 
 
 \section{Gráficos}
-\label{sec:org81096d5}
+\label{sec:org85c3f77}
 
 
-\begin{frame}[label={sec:org0b53c15}]{Función de Densidad de Probabilidad}
+\begin{frame}[label={sec:orgcae4919}]{Función de Densidad de Probabilidad}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/FuncionDensidadProbabilidad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org345583e}]{Histograma}
+\begin{frame}[label={sec:org8ae07e8}]{Histograma}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Histograma.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org3c21c32}]{Gráficos boxplot}
+\begin{frame}[label={sec:org4e0595c}]{Gráficos boxplot}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoBoxplot.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org3ebb3d8}]{Gráficos de dispersión}
+\begin{frame}[label={sec:orgd2565d8}]{Gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoDispersion.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdf1a793}]{Matrices de gráficos de dispersión}
+\begin{frame}[label={sec:org8a9c647}]{Matrices de gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Splom.png}
 \end{center}
 \end{frame}
 
 \section{Comparación entre Datos y Estimación}
-\label{sec:org0810da5}
+\label{sec:org31ab98b}
 
-\begin{frame}[label={sec:orgb414505}]{Desviación entre modelo y observación}
+\begin{frame}[label={sec:orge43e3ae}]{Desviación entre modelo y observación}
 \begin{itemize}
 \item Sea \(O\) el conjunto de observaciones (medidas) de una variable aleatoria.
 \end{itemize}
@@ -279,7 +280,7 @@ una \alert{medida de la dispersión} de la variable.
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org245feef}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
+\begin{frame}[label={sec:org2c4d6d8}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
 \begin{center}
 \includegraphics[height=0.8\textheight]{../figs/bias-variance.png}
 \end{center}
@@ -287,7 +288,7 @@ una \alert{medida de la dispersión} de la variable.
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:org3645d94}]{Estimadores frecuentes: MBD y RMSD}
+\begin{frame}[label={sec:orga86c89b}]{Estimadores frecuentes: MBD y RMSD}
 \begin{itemize}
 \item Mean Bias Difference (MBD), diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -303,7 +304,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgf0291c9}]{Estimadores frecuentes: MBE y RMSD}
+\begin{frame}[label={sec:orgf755235}]{Estimadores frecuentes: MBE y RMSD}
 El RMSD agrega información del promedio y la varianza de la
   diferencia:
 \[
@@ -317,7 +318,7 @@ donde la varianza de la diferencia (unbiased RMSD) se calcula:
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdbf2105}]{Otros estimadores: MAD}
+\begin{frame}[label={sec:orgb510e56}]{Otros estimadores: MAD}
 \begin{itemize}
 \item Mean Absolute Deviation (MAD):
 \end{itemize}
@@ -335,7 +336,7 @@ MAD \leq RMSD \leq n^{1/2} MAD
 \nocite{Willmott.Matsuura.ea2009, Willmott.Matsuura2005a}
 \end{frame}
 
-\begin{frame}[label={sec:org495fb8c}]{Otros estimadores: t y d}
+\begin{frame}[label={sec:org726d358}]{Otros estimadores: t y d}
 \begin{itemize}
 \item t de Student (valores pequeños indican buen comportamiento del modelo)
 \begin{itemize}
@@ -367,7 +368,7 @@ d_1 = 1 - \frac{\sum_{i=1}^n \left| m_i - o_i \right|}{\sum_{i=1}^n \left(
 \nocite{Willmott.Robeson.ea2012}
 \end{frame}
 
-\begin{frame}[label={sec:org539d15b}]{Correlación}
+\begin{frame}[label={sec:org647e0eb}]{Correlación}
 El coeficiente de correlación entre dos conjuntos de datos es una
 medida numérica de la relación \alert{lineal} entre los dos conjuntos (si la
 relación no es lineal, este coeficiente no sirve):
@@ -388,7 +389,7 @@ r = \frac{1}{n-1} \cdot \sum_{i=1}^{n} \left( \frac{o_{i}-\overline{\mathbf{O}}}
 \end{frame}
 
 
-\begin{frame}[label={sec:orge68fb95}]{Diagramas de Taylor}
+\begin{frame}[label={sec:org11958c8}]{Diagramas de Taylor}
 \begin{itemize}
 \item Desarrollando \(\sigma^2_{\mathbf{D}}\) y teniendo en cuenta la definición de \(r\):
 \end{itemize}
@@ -407,7 +408,7 @@ c^2 = a^2 + b^2 - 2 \cdot a \cdot b \cos\phi
 \nocite{Taylor2000}
 \end{frame}
 
-\begin{frame}[label={sec:orga4ba439}]{Diagramas de Taylor}
+\begin{frame}[label={sec:org3b691b7}]{Diagramas de Taylor}
 \[
 \sigma^2_{\mathbf{D}} = \sigma^2_{\mathbf{O}}  + \sigma^2_{\mathbf{M}}
 - 2 \cdot \sigma_{\mathbf{O}} \cdot \sigma_{\mathbf{M}} \cdot r 
@@ -432,7 +433,7 @@ c^2 = a^2 + b^2 - 2 \cdot a \cdot b \cos\phi
 \end{frame}
 
 
-\begin{frame}[label={sec:org8f0e5de}]{Target Diagram}
+\begin{frame}[label={sec:org5fe67f0}]{Target Diagram}
 \begin{itemize}
 \item Emplea la relación entre \(RMSD\), \(\sigma^2_{\mathbf{D}}\), y \(\overline{\mathbf{D}}\), normalizadas con \(\sigma_{\mathbf{O}}\):
 \end{itemize}
@@ -452,18 +453,19 @@ RMSD' = RMSD / \sigma_{\mathbf{O}}
 RMSD'^2= \sigma'^2_{\mathbf{D}} + \overline{\mathbf{D}}'^2
 \]
 
+\begin{itemize}
+\item Incorporan el signo de la diferencia entre desviaciones estándar del modelo y las observaciones.
+\end{itemize}
+
 \[
 sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \]
 
-\begin{itemize}
-\item Incorporan el signo de la diferencia entre desviaciones estándar de modelo y observación.
-\end{itemize}
 
 \nocite{Jolliff.Kindle.ea2009}
 \end{frame}
 
-\begin{frame}[label={sec:orgdd6f49c}]{Target Diagram}
+\begin{frame}[label={sec:orge6acbcf}]{Target Diagram}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{itemize}
@@ -483,9 +485,9 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 
 
 \section{Coherencia Estadística}
-\label{sec:orged5eb2a}
+\label{sec:org4600b08}
 
-\begin{frame}[label={sec:orgc3eca98}]{Planteamiento}
+\begin{frame}[label={sec:org26cf791}]{Planteamiento}
 \begin{itemize}
 \item En un sistema compuesto por diferentes \alert{unidades idénticas}, el funcionamiento de todas ellas debe ser el mismo.
 \item Los \alert{elementos reales} presentan \alert{diferencias} (tolerancia de potencia, pérdidas de dispersión, suciedad), de forma que el comportamiento de cada unidad se desviará del comportamiento promedio.
@@ -493,7 +495,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \item Un análisis estadístico del funcionamiento del conjunto puede \alert{identificar una unidad defectuosa} como aquella que se aparta significativamente del comportamiento promedio.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org720e458}]{Coherencia estadística}
+\begin{frame}[label={sec:org4578336}]{Coherencia estadística}
 \begin{itemize}
 \item Una medida puede ser etiquetada como \emph{outlier} si es poco probable que pertenezca a la misma distribución que el conjunto.
 \item En estadística hay métodos diversos para realizar este análisis:
@@ -507,7 +509,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \end{frame}
 
 
-\begin{frame}[label={sec:org7eb2172}]{Método de Chauvenet}
+\begin{frame}[label={sec:org8b6b634}]{Método de Chauvenet}
 Una medida es un \emph{outlier} si la probabilidad de obtener su desviación
 respecto de la media es inferior al inverso de 2 veces el número de
 elementos en el conjunto.
@@ -516,7 +518,7 @@ elementos en el conjunto.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9bd4200}]{Método de Chauvenet}
+\begin{frame}[label={sec:org6b1c66c}]{Método de Chauvenet}
 \begin{enumerate}
 \item Supongamos un SFV compuesto por \(N\) unidades idénticas.
 \item Sea \(Y_{f,i}\) la medida de \alert{productividad diaria} de una de esas unidades.
@@ -534,7 +536,7 @@ que hay dos colas.
 \nocite{Perpinan2009}
 \end{frame}
 
-\begin{frame}[label={sec:org2680ff6}]{Método de Chauvenet}
+\begin{frame}[label={sec:orgbf07c85}]{Método de Chauvenet}
 \begin{itemize}
 \item Por ejemplo, para un sistema de 10 unidades, la probabilidad es \(1/20\).
 
@@ -565,15 +567,15 @@ que hay dos colas.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org62fb898}]{Métodos gráficos}
+\begin{frame}[label={sec:org5121dc5}]{Métodos gráficos}
 \begin{itemize}
-\item Sea \(Y_{f,i}(t)\) la serie temporal de la productividad diaria de una unidad del SFV.
-\item Sea \(\overline{Y}_{f}(t)\) la serie temporal del promedio de la productividad diaria del SFV.
-\item Tomando \(\overline{Y}_{f}(t)\) como modelo o referencia, podemos emplear los diagramas de Taylor y Target para detectar unidades defectuosas.
+\item Sea \(Y_{f,i}(t)\) la serie temporal de la productividad diaria de \alert{una unidad} del SFV.
+\item Sea \(\widetilde{Y}_{f}(t)\) la serie temporal de la \alert{mediana} de la productividad diaria del SFV \alert{completo}.
+\item Tomando \(\widetilde{Y}_{f}(t)\) como modelo o referencia, podemos emplear los diagramas de Taylor y Target para detectar unidades defectuosas durante períodos de tiempo.
 \end{itemize}
 
 \begin{center}
-\includegraphics[height=0.75\textheight]{../figs/TargetDiagram_Dia120.pdf}
+\includegraphics[height=0.6\textheight]{../figs/TargetDiagram_Dia120.pdf}
 \end{center}
 \end{frame}
 \end{document}
