--- a/diapos/SombrasOcupacionTerreno.tex
+++ b/diapos/SombrasOcupacionTerreno.tex
@@ -1,4 +1,4 @@
-% Created 2023-01-19 jue 23:10
+% Created 2023-03-18 sáb 18:38
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -24,6 +24,7 @@
 \DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\tiny, formatcom = {\color{black!70}}}
 \bibliographystyle{plain}
 \usepackage{siunitx}
+\sisetup{per-mode=symbol}
 \sisetup{output-decimal-marker={,}}
 \DeclareSIUnit{\watthour}{Wh}
 \DeclareSIUnit{\wattpeak}{Wp}
@@ -31,7 +32,7 @@
 \DeclareSIUnit{\amperehour}{Ah}
 \usepackage{steinmetz}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
-\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\usepackage[symbol, perpage]{footmisc}
 \parskip=5pt
 \usetheme{Boadilla}
 \usecolortheme{rose}
@@ -62,15 +63,15 @@
 \maketitle
 
 \section{Sistemas estáticos}
-\label{sec:org8b879a5}
+\label{sec:org899e005}
 
-\begin{frame}[label={sec:orgeb75a69}]{Sombras entre filas}
+\begin{frame}[label={sec:orgd66c2a6}]{Sombras entre filas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SombraEstaticaInclinado2.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc0602f6}]{Sombras entre filas}
+\begin{frame}[label={sec:org7135af8}]{Sombras entre filas}
 \begin{itemize}
 \item Suele establecerse un objetivo de \alert{4 horas de sol en torno al mediodía del solsticio de invierno libres de sombra}.
 
@@ -85,7 +86,7 @@ $$\gamma_{s}=90-23.45-\phi\simeq67-\phi$$
 \end{itemize}
 $$d_{min}=\frac{h}{\tan(61\degree-\phi)}$$
 \end{frame}
-\begin{frame}[label={sec:orged44bcf}]{Separación entre filas}
+\begin{frame}[label={sec:orgdbbc8be}]{Separación entre filas}
 \begin{columns}
 \begin{column}{0.65\columnwidth}
 \begin{center}
@@ -105,16 +106,19 @@ W=\infty\]
 \[
   ROT=D/L
 \]
+\[
+  GCR=L/D
+\]
 \end{column}
 \end{columns}
 \end{frame}
 
 
 \section{Sistemas de seguimiento 2X}
-\label{sec:org5e33c23}
+\label{sec:orgf539ece}
 
 
-\begin{frame}[label={sec:org8872e91}]{Separación de seguidores Doble Eje}
+\begin{frame}[label={sec:orga27a33a}]{Separación de seguidores Doble Eje}
 \begin{center}
 \includegraphics[height=0.45\textheight]{../figs/Sombras2X.pdf}
 \end{center}
@@ -128,12 +132,13 @@ W=\infty\]
 
 \begin{column}{0.4\columnwidth}
 $$ROT=\frac{L_{ns}\cdot L_{eo}}{L \cdot W}$$
+$$GCR=\frac{L \cdot W}{L_{ns}\cdot L_{eo}}$$
 $$E_{ac}=f(ROT)??$$
 \end{column}
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orge4ad23b}]{Radiación promedio}
+\begin{frame}[label={sec:orgc68b1c2}]{Radiación promedio}
 $$G_{ef, av} = 1/24 \cdot \left( 10 \cdot G_{ef,0} + 5 \cdot G_{ef,A} + G_{ef,B} + 2 \cdot G_{ef,C} + G_{ef,D} + 5 \cdot G_{ef,E} \right)$$
 
 \begin{columns}
@@ -152,12 +157,13 @@ $$G_{ef, av} = 1/24 \cdot \left( 10 \cdot G_{ef,0} + 5 \cdot G_{ef,A} + G_{ef,B}
 \end{frame}
 
 
-\begin{frame}[label={sec:org70f61c9}]{Separación de Seguidores Doble Eje}
+\begin{frame}[label={sec:orgc6cb136}]{Separación de Seguidores Doble Eje}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 $$b=\frac{L}{W}=0.475$$
 
 $$ROT=\frac{L_{ns}\cdot L_{eo}}{L \cdot W}$$
+$$GCR=\frac{L \cdot W}{L_{ns}\cdot L_{eo}}$$
 \end{column}
 
 \begin{column}{0.7\columnwidth}
@@ -170,9 +176,9 @@ $$ROT=\frac{L_{ns}\cdot L_{eo}}{L \cdot W}$$
 
 
 \section{Seguidores de eje horizontal NS}
-\label{sec:org495fa9f}
+\label{sec:orgd77fc4e}
 
-\begin{frame}[label={sec:org242b9bb}]{Separación de Seguidores Eje Horizontal}
+\begin{frame}[label={sec:org5e5cb13}]{Separación de Seguidores Eje Horizontal}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/SombrasHoriz.pdf}
 \end{center}
@@ -180,13 +186,13 @@ $$ROT=\frac{L_{ns}\cdot L_{eo}}{L \cdot W}$$
 $$W=\infty$$ $$ROT=L_{eo}/L$$
 \end{frame}
 
-\begin{frame}[label={sec:org53447b9}]{Separación de Seguidores Horizontal N-S}
+\begin{frame}[label={sec:org2307743}]{Separación de Seguidores Horizontal N-S}
 \begin{center}
 \includegraphics[angle=90,height=0.9\textheight]{../figs/AbacoSeguidorHorizSombra_Ene10.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org300275a}]{Backtracking}
+\begin{frame}[label={sec:org2ff6c42}]{Backtracking}
 \begin{itemize}
 \item El \alert{sombreado} en un generador puede producir problemas por el efecto
 de \alert{punto caliente}.
@@ -209,19 +215,19 @@ la \alert{horizontal en la noche}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbe3715e}]{Backtracking}
+\begin{frame}[label={sec:org1bb3747}]{Backtracking}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/BackTracking.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orga70a005}]{Separación con backtracking}
+\begin{frame}[label={sec:orgd07f329}]{Separación con backtracking}
 \begin{center}
 \includegraphics[angle=90,height=0.9\textheight]{../figs/AbacoHorizBT_Ene10.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org447f99c}]{Limitación de ángulo}
+\begin{frame}[label={sec:org085f889}]{Limitación de ángulo}
 \begin{itemize}
 \item Es habitual limitar el ángulo de inclinación a valores máximos alrededor de 70° por motivos estructurales (protección frente al viento)
 
@@ -236,10 +242,10 @@ la \alert{horizontal en la noche}.
 \end{frame}
 
 \section{Elección de separaciones}
-\label{sec:org977e00b}
+\label{sec:org7580be2}
 
 
-\begin{frame}[label={sec:orgafbab6a}]{Elección de separaciones}
+\begin{frame}[label={sec:org4b009ea}]{Elección de separaciones}
 La \alert{separación óptima} entre elementos (seguidores o estructuras
 estáticas) es aquella que conduce al \alert{mínimo valor del coste de la
 energía} producida por el sistema.
@@ -260,7 +266,7 @@ potencia.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5235d97}]{Elección de separaciones}
+\begin{frame}[label={sec:org3871e96}]{Elección de separaciones}
 \begin{itemize}
 \item Esta separación óptima \alert{depende} de las \alert{estructuras elegidas} y de
 las \alert{condiciones económicas} de los elementos.
@@ -270,7 +276,7 @@ condiciones del terreno} (fronteras, irregularidades, vaguadas, etc.)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5fcea6b}]{Ocupación óptima}
+\begin{frame}[label={sec:orgf783d3b}]{Ocupación óptima}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{center}
@@ -293,7 +299,7 @@ $$C_p = C_c + C_A + C_{PV}$$
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgf2f1683}]{Separaciones y coste de la energía}
+\begin{frame}[label={sec:org101a349}]{Separaciones y coste de la energía}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/matrixGRR.png}
 \end{center}
