--- a/diapos/AnalisisDatosProduccion.tex
+++ b/diapos/AnalisisDatosProduccion.tex
@@ -1,16 +1,14 @@
-% Created 2023-03-21 mar 16:48
+% Created 2023-03-23 jue 14:27
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
-\usepackage{grffile}
 \usepackage{longtable}
 \usepackage{wrapfig}
 \usepackage{rotating}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath}
-\usepackage{textcomp}
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
@@ -58,13 +56,13 @@
  pdftitle={Análisis de datos de producción},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.2 (Org mode 9.4.6)}, 
+ pdfcreator={Emacs 28.2 (Org mode 9.6)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
-\begin{frame}[label={sec:orgf19566a}]{Planteamiento}
+\begin{frame}[label={sec:org1f71de3}]{Planteamiento}
 \begin{itemize}
 \item La \alert{energía producida por un SFV} durante un período puede ser \alert{estimada} a partir de la \alert{radiación incidente} y de las \alert{características técnicas} del sistema.
 \item Teniendo en cuenta el carácter estocástico de la radiación solar, la estimación de la energía que producirá un SFV durante los próximos años es un ejercicio de \alert{predicción con incertidumbre} asociada.
@@ -74,10 +72,10 @@
 \end{frame}
 
 \section{Estadística}
-\label{sec:org8e78e58}
+\label{sec:org8523c80}
 
 
-\begin{frame}[label={sec:org95b8602}]{Variable aleatoria y proceso estocástico}
+\begin{frame}[label={sec:orgaa2c580}]{Variable aleatoria y proceso estocástico}
 \begin{itemize}
 \item Una \alert{variable aleatoria} es una función que asigna un único numero
 real a cada resultado de un espacio muestral en un experimento.
@@ -87,7 +85,7 @@ lo largo del \alert{tiempo} (p.ej. la radiación).
 \end{frame}
 
 
-\begin{frame}[label={sec:orge6a5034}]{Función de densidad de probabilidad}
+\begin{frame}[label={sec:org067c309}]{Función de densidad de probabilidad}
 La función de densidad de probabilidad, \(f(X)\), de una variable
 aleatoria \alert{asigna probabilidad} a un suceso:
 
@@ -116,7 +114,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 \end{frame}
 
 
-\begin{frame}[label={sec:org62d1242}]{Media, varianza y desviación estándar}
+\begin{frame}[label={sec:org5f2e18f}]{Media, varianza y desviación estándar}
 \begin{itemize}
 \item La \alert{media} de una variable aleatoria es el \alert{centro de masas} de su función densidad de probabilidad:
 \end{itemize}
@@ -140,7 +138,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 
 
 
-\begin{frame}[label={sec:org488ff2e}]{Combinación lineal de variables aleatorias}
+\begin{frame}[label={sec:org4dfcfb7}]{Combinación lineal de variables aleatorias}
 \begin{itemize}
 \item La \alert{media de la suma} de varias variables aleatorias \alert{independientes} es
 la suma de las medias:
@@ -161,7 +159,7 @@ la suma de las medias:
 
 
 
-\begin{frame}[label={sec:org5074016}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:org9501263}]{Media y varianza de la media muestral}
 \begin{itemize}
 \item Una \alert{muestra de una población} es un conjunto de variables
 aleatorias independientes (\(X_{1}...X_{n}\)).
@@ -177,7 +175,7 @@ variable aleatoria (que es una suma de variables aleatorias)
 
 
 
-\begin{frame}[label={sec:org9f89d1d}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:org57bc476}]{Media y varianza de la media muestral}
 Sea una población cuya media es \(\mu\) y su varianza es \(\sigma^{2}\):
 
 \begin{itemize}
@@ -203,7 +201,7 @@ Por tanto, una forma de \alert{reducir la incertidumbre} es realizar la
 
 
 
-\begin{frame}[label={sec:orga2f646d}]{Mediana y cuartiles}
+\begin{frame}[label={sec:orge2afb6a}]{Mediana y cuartiles}
 \begin{itemize}
 \item La \alert{mediana} divide el conjunto de valores de la variable en \alert{dos
 mitades} iguales (divide el area encerrada por la función densidad
@@ -217,44 +215,47 @@ una \alert{medida de la dispersión} de la variable.
 \end{frame}
 
 
-\section{Gráficos}
-\label{sec:org8584e91}
+\section{Gráficos estadísticos}
+\label{sec:orgd1e6144}
 
 
-\begin{frame}[label={sec:org412c270}]{Función de Densidad de Probabilidad}
+\begin{frame}[label={sec:orgbe23b9b}]{Función de Densidad de Probabilidad}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/FuncionDensidadProbabilidad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgcff41d7}]{Histograma}
+\begin{frame}[label={sec:orged9c788}]{Histograma}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Histograma.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org81e2f96}]{Gráficos boxplot}
+\begin{frame}[label={sec:org5cc1719}]{Gráficos boxplot}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoBoxplot.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org61ae24f}]{Gráficos de dispersión}
+\begin{frame}[label={sec:org3becdb1}]{Gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoDispersion.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org7cddef8}]{Matrices de gráficos de dispersión}
+\begin{frame}[label={sec:org2f87a76}]{Matrices de gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Splom.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6c1d6bb}]{Gráficos Fotovoltaicos\footnote{Más ejemplos en el informe \guillemotleft{}\href{https://iea-pvps.org/key-topics/analytical-monitoring-of-pv-systems-final/}{Analytical Monitoring of Grid-connected Photovoltaic Systems}\guillemotright{} de la Task 13 del IEA-PVPS.}}
+\section{Gráficos Fotovoltaicos}
+\label{sec:org95a13f6}
+
+\begin{frame}[label={sec:org89d3687}]{Inventario\footnote{Más ejemplos en el informe \guillemotleft{}\href{https://iea-pvps.org/key-topics/analytical-monitoring-of-pv-systems-final/}{Analytical Monitoring of Grid-connected Photovoltaic Systems}\guillemotright{} de la Task 13 del IEA-PVPS.}}
 \begin{itemize}
 \item \(Y_f \sim Y_r\) (valores diarios e intradiarios)
 
@@ -278,10 +279,53 @@ Relación lineal decreciente. Detección de problemas en el MPPT, limitación de
 \end{itemize}
 \end{frame}
 
-\section{Comparación entre Datos y Estimación}
-\label{sec:org93a8283}
+\begin{frame}[label={sec:orgf4ad1cf}]{\(Y_f \sim Y_r\)}
+\begin{center}
+\includegraphics[height=0.95\textheight]{../figs/YfYr.pdf}
+\end{center}
+\end{frame}
 
-\begin{frame}[label={sec:orgba1c538}]{Desviación entre modelo y observación}
+\begin{frame}[label={sec:orgb4a2799}]{Error de funcionamiento \(Y_f \sim Y_r\)}
+\begin{center}
+\includegraphics[height=0.95\textheight]{../figs/ErrorYf.pdf}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:orgf619acb}]{\(Y_a \sim Y_r\)}
+\begin{center}
+\includegraphics[height=0.95\textheight]{../figs/YaYr.pdf}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:orga880a44}]{Error de funcionamiento \(Y_a \sim Y_r\)}
+\begin{center}
+\includegraphics[height=0.95\textheight]{../figs/ErrorMonitorizacion.pdf}
+\end{center}
+\end{frame}
+
+
+\begin{frame}[label={sec:org6f50382}]{\(pr \sim T_c\)}
+\begin{center}
+\includegraphics[height=0.95\textheight]{../figs/prTc.pdf}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:org691aedd}]{\(V_g \sim T_c\)}
+\begin{center}
+\includegraphics[height=0.95\textheight]{../figs/VgTc.pdf}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:org50da541}]{Error de funcionamiento \(V_g \sim T_c\)}
+\begin{center}
+\includegraphics[height=0.95\textheight]{../figs/ErrorVgTc.pdf}
+\end{center}
+\end{frame}
+
+\section{Comparación entre Datos y Estimación}
+\label{sec:org7f0010a}
+
+\begin{frame}[label={sec:org844d624}]{Desviación entre modelo y observación}
 \begin{itemize}
 \item Sea \(O\) el conjunto de observaciones (medidas) de una variable aleatoria.
 \end{itemize}
@@ -306,7 +350,7 @@ Relación lineal decreciente. Detección de problemas en el MPPT, limitación de
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgf195c96}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
+\begin{frame}[label={sec:org5ead824}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
 \begin{center}
 \includegraphics[height=0.8\textheight]{../figs/bias-variance.png}
 \end{center}
@@ -314,7 +358,7 @@ Relación lineal decreciente. Detección de problemas en el MPPT, limitación de
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:org2cedd2b}]{Estimadores frecuentes: MBD y RMSD}
+\begin{frame}[label={sec:org79d5147}]{Estimadores frecuentes: MBD y RMSD}
 \begin{itemize}
 \item Mean Bias Difference (MBD), diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -330,7 +374,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgccccfa8}]{Estimadores frecuentes: MBE y RMSD}
+\begin{frame}[label={sec:orge283337}]{Estimadores frecuentes: MBE y RMSD}
 El RMSD agrega información del promedio y la varianza de la
   diferencia:
 \[
@@ -344,7 +388,7 @@ donde la varianza de la diferencia (unbiased RMSD) se calcula:
 \end{frame}
 
 
-\begin{frame}[label={sec:org61c0107}]{Otros estimadores: MAD}
+\begin{frame}[label={sec:org419959d}]{Otros estimadores: MAD}
 \begin{itemize}
 \item Mean Absolute Deviation (MAD):
 \end{itemize}
@@ -362,7 +406,7 @@ MAD \leq RMSD \leq n^{1/2} MAD
 \nocite{Willmott.Matsuura.ea2009, Willmott.Matsuura2005a}
 \end{frame}
 
-\begin{frame}[label={sec:org4f3ff67}]{Otros estimadores: t y d}
+\begin{frame}[label={sec:orgb46e4ac}]{Otros estimadores: t y d}
 \begin{itemize}
 \item t de Student (valores pequeños indican buen comportamiento del modelo)
 \begin{itemize}
@@ -394,7 +438,7 @@ d_1 = 1 - \frac{\sum_{i=1}^n \left| m_i - o_i \right|}{\sum_{i=1}^n \left(
 \nocite{Willmott.Robeson.ea2012}
 \end{frame}
 
-\begin{frame}[label={sec:org1a2166b}]{Correlación}
+\begin{frame}[label={sec:org5955178}]{Correlación}
 El coeficiente de correlación entre dos conjuntos de datos es una
 medida numérica de la relación \alert{lineal} entre los dos conjuntos (si la
 relación no es lineal, este coeficiente no sirve):
@@ -415,7 +459,7 @@ r = \frac{1}{n-1} \cdot \sum_{i=1}^{n} \left( \frac{o_{i}-\overline{\mathbf{O}}}
 \end{frame}
 
 
-\begin{frame}[label={sec:org062d2e6}]{Diagramas de Taylor}
+\begin{frame}[label={sec:org567f99f}]{Diagramas de Taylor}
 \begin{itemize}
 \item Desarrollando \(\sigma^2_{\mathbf{D}}\) y teniendo en cuenta la definición de \(r\):
 \end{itemize}
@@ -434,7 +478,7 @@ c^2 = a^2 + b^2 - 2 \cdot a \cdot b \cos\phi
 \nocite{Taylor2000}
 \end{frame}
 
-\begin{frame}[label={sec:orged00c59}]{Diagramas de Taylor}
+\begin{frame}[label={sec:orgdf94e2a}]{Diagramas de Taylor}
 \[
 \sigma^2_{\mathbf{D}} = \sigma^2_{\mathbf{O}}  + \sigma^2_{\mathbf{M}}
 - 2 \cdot \sigma_{\mathbf{O}} \cdot \sigma_{\mathbf{M}} \cdot r 
@@ -459,7 +503,7 @@ c^2 = a^2 + b^2 - 2 \cdot a \cdot b \cos\phi
 \end{frame}
 
 
-\begin{frame}[label={sec:org8c1a9f1}]{Target Diagram}
+\begin{frame}[label={sec:org7eb7695}]{Target Diagram}
 \begin{itemize}
 \item Emplea la relación entre \(RMSD\), \(\sigma^2_{\mathbf{D}}\), y \(\overline{\mathbf{D}}\), normalizadas con \(\sigma_{\mathbf{O}}\):
 \end{itemize}
@@ -491,7 +535,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \nocite{Jolliff.Kindle.ea2009}
 \end{frame}
 
-\begin{frame}[label={sec:orgc8227cb}]{Target Diagram}
+\begin{frame}[label={sec:orgd79527a}]{Target Diagram}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{itemize}
@@ -511,9 +555,9 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 
 
 \section{Coherencia Estadística}
-\label{sec:orgcbdff50}
+\label{sec:org42bcc72}
 
-\begin{frame}[label={sec:org47ced18}]{Planteamiento}
+\begin{frame}[label={sec:orga46f0a5}]{Planteamiento}
 \begin{itemize}
 \item En un sistema compuesto por diferentes \alert{unidades idénticas}, el funcionamiento de todas ellas debe ser el mismo.
 \item Los \alert{elementos reales} presentan \alert{diferencias} (tolerancia de potencia, pérdidas de dispersión, suciedad), de forma que el comportamiento de cada unidad se desviará del comportamiento promedio.
@@ -521,7 +565,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \item Un análisis estadístico del funcionamiento del conjunto puede \alert{identificar una unidad defectuosa} como aquella que se aparta significativamente del comportamiento promedio.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org19a8aaf}]{Coherencia estadística}
+\begin{frame}[label={sec:org5e8b9c8}]{Coherencia estadística}
 \begin{itemize}
 \item Una medida puede ser etiquetada como \emph{outlier} si es poco probable que pertenezca a la misma distribución que el conjunto.
 \item En estadística hay métodos diversos para realizar este análisis:
@@ -535,7 +579,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \end{frame}
 
 
-\begin{frame}[label={sec:org75f6851}]{Método de Chauvenet}
+\begin{frame}[label={sec:org3f904b6}]{Método de Chauvenet}
 Una medida es un \emph{outlier} si la probabilidad de obtener su desviación
 respecto de la media es inferior al inverso de 2 veces el número de
 elementos en el conjunto.
@@ -544,7 +588,7 @@ elementos en el conjunto.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1cde2e7}]{Método de Chauvenet}
+\begin{frame}[label={sec:org98256a3}]{Método de Chauvenet}
 \begin{enumerate}
 \item Supongamos un SFV compuesto por \(N\) unidades idénticas.
 \item Sea \(Y_{f,i}\) la medida de \alert{productividad diaria} de una de esas unidades.
@@ -562,7 +606,7 @@ que hay dos colas.
 \nocite{Perpinan2009}
 \end{frame}
 
-\begin{frame}[label={sec:orge71857c}]{Método de Chauvenet}
+\begin{frame}[label={sec:org76f4103}]{Método de Chauvenet}
 \begin{itemize}
 \item Por ejemplo, para un sistema de 10 unidades, la probabilidad es \(1/20\).
 
@@ -593,7 +637,7 @@ que hay dos colas.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org02012d7}]{Métodos gráficos}
+\begin{frame}[label={sec:orgf6aec8b}]{Métodos gráficos}
 \begin{itemize}
 \item Sea \(Y_{f,i}(t)\) la serie temporal de la productividad diaria de \alert{una unidad} del SFV.
 \item Sea \(\widetilde{Y}_{f}(t)\) la serie temporal de la \alert{mediana} de la productividad diaria del SFV \alert{completo}.
