--- a/libro/SFCR.tex
+++ b/libro/SFCR.tex
@@ -1075,7 +1075,7 @@ MPP del inversor}
 Como método aproximado para obtener el valor de $V_{mppM}$ corregido
 con la temperatura, puede tenerse en cuenta que un módulo de 36 células
 de silicio cristalino conectadas en serie entrega una tensión $V_{mppM}\simeq\SI{15}{\volt}$
-cuando la temperatura ambiente es $T_{a}=\SI{25}{\celsius})$. A partir
+cuando la temperatura ambiente es $T_{a}=\SI{25}{\celsius}$. A partir
 de este valor se establece una regla de tres una vez conocido el número
 de células en serie del módulo en estudio. 
 
