Explica mejor cálculo de reparto de tensión

--- a/libro/SFCR.tex
+++ b/libro/SFCR.tex
@@ -1324,10 +1324,11 @@ inversor es \cite{Perpinan2012b}:
 \end{equation}
 siendo $\Delta U$ la caída de tensión admisible en el circuito,
 $\Delta U_{inv}$ la caída en el tramo desde una caja de paralelos
-hasta la entrada del inversor, $L_i$ la longitud de cableado desde el
-generador hasta la caja de paralelos, $L_{inv}$ la longitud de
-cableado desde la caja hasta el inversor, $I_i$ la corriente que
-circula por este tramo, e $I_{inv}$ la corriente total en el circuito.
+hasta la entrada del inversor, $n$ el número de generadores que se
+agrupan en la caja de paralelos, $L_i$ la longitud de cableado desde
+el generador $i$ hasta la caja de paralelos, $I_i$ la corriente en
+este tramo, $L_{inv}$ la longitud de cableado desde la caja hasta el
+inversor, e $I_{inv}$ la corriente total en el circuito.
 
 Tomemos como ejemplo una instalación en la que se agrupan en una caja
 de paralelos las salidas los generadores ubicados en 20 seguidores,
